# meta

./: .gitignore  CMakeLists.txt  README.md  macro.hpp
example/: CMakeLists.txt  main.cpp
include/meta/: macro.hpp  reflection.hpp
include/meta/macro/: array.hpp  loop.hpp
include/meta/macro/array/: index.hpp  pop_back.hpp  pop_front.hpp  reserve.hpp
include/meta/macro/basic/: equal.hpp  eval.hpp  primitive.hpp
include/meta/macro/loop/: for.hpp  foreach.hpp  while.hpp
macro/: arithmetic.hpp  array.hpp  basic.hpp  enum.hpp  for.hpp  foreach.hpp  variadic.hpp
macro/arithmetic/: add.hpp  decrement.hpp  increment.hpp  sub.hpp
macro/array/: index.hpp
macro/basic/: dec.hpp  decrement.hpp  equal.hpp  eval.hpp  if.hpp  inc.hpp  increment.hpp  primitive.hpp  while.hpp
macro/loop/: for.hpp  foreach.hpp  while.hpp
macro/va_args/: count.hpp  index.hpp  pop_back.hpp  pop_front.hpp  remove.hpp  reserve.hpp  sub_args.hpp  to_string.hpp
meta/: main.cpp
